--- a/CloudVideoPlayer.Website/_Imports.razor
+++ b/CloudVideoPlayer.Website/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using AngryMonkey.Cloud.VideoPlayer.Website
 @using AngryMonkey.Cloud.VideoPlayer.Website.Shared
-@using AngryMonkey.Cloud.VideoPlayer.Components
+@using AngryMonkey.Cloud.Components
