Progress bar initialized

--- a/CloudVideoPlayer.Website/Pages/Index.razor
+++ b/CloudVideoPlayer.Website/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-
+@*
 <VideoPlayer Title="Welcome Lebanon :)" VideoUrl="https://angrymonkey.blob.core.windows.net/general/Good%20Morning%20Lebanon.mp4" Settings="@(
 new VideoPlayerSettings() {
     ShowVolumeButton = true
@@ -13,4 +13,6 @@ new VideoPlayerSettings() {
     ShowVolumeButton = true
 }
 )">
-</VideoPlayer>
+</VideoPlayer>*@
+
+<ProgressBar Value="23" />
