--- a/CloudVideoPlayer.Components/VideoPlayer.razor
+++ b/CloudVideoPlayer.Components/VideoPlayer.razor
@@ -1,6 +1,6 @@
 ﻿@inject VideoPlayerJsInterop js
 
-<div @ref="ComponentElement" class="cloudvideoplayer">
+<div class="cloudvideoplayer" @ref="ComponentElement">
 
     <div class="cloudvideoplayer-video">
         <video src="@VideoUrl"></video>
@@ -39,11 +39,18 @@
     </div>
 
     <div class="cloudvideoplayer-progress">
+        <div class="cloudvideoplayer-progress-line"></div>
+        <div class="cloudvideoplayer-progress-circle">
+                <svg viewBox="0 0 40 40">
+                    <circle class="cloudvideoplayer-svg-fill" cx="20" cy="20" r="18" />
+                </svg>
+        </div>
     </div>
 
 </div>
 
 @code {
+    private ElementReference ComponentElement { get; set; }
 
     [Parameter]
     public string Title { get; set; }
@@ -54,7 +61,6 @@
     [Parameter]
     public VideoPlayerSettings Settings { get; set; }
 
-    private ElementReference ComponentElement { get; set; }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
