--- a/CloudVideoPlayer.Components/wwwroot/cloudvideoplayer.css
+++ b/CloudVideoPlayer.Components/wwwroot/cloudvideoplayer.css
@@ -49,6 +49,39 @@
 .cloudvideoplayer-pause {
   display: none;
 }
+.cloudvideoplayer-progress {
+  display: grid;
+  grid-template-areas: 'line circle line';
+  grid-template-columns: 300px 20px 200px;
+  align-items: center;
+}
+.cloudvideoplayer-progress-line {
+  grid-area: line;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+}
+.cloudvideoplayer-progress-line::after {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  height: 1px;
+  top: 0;
+  left: 0;
+  width: 40%;
+}
+.cloudvideoplayer-progress-circle {
+  grid-area: circle;
+  height: 20px;
+  width: 20px;
+  z-index: 1;
+}
+.cloudvideoplayer-progress-circle .cloudvideoplayer-svg-fill {
+  fill: transparent;
+  stroke: #fff;
+  stroke-width: 3px;
+}
 .cloudvideoplayer._playing .cloudvideoplayer-play {
   display: none;
 }
