--- a/CloudVideoPlayer.Components/wwwroot/cloudvideoplayer.less
+++ b/CloudVideoPlayer.Components/wwwroot/cloudvideoplayer.less
@@ -67,6 +67,44 @@
 		display: none;
 	}
 
+	&-progress {
+		display: grid;
+		grid-template-areas: 'line circle line';
+		grid-template-columns: 300px 20px 200px;
+		align-items: center;
+
+		&-line {
+			grid-area: line;
+			width: 100%;
+			height: 1px;
+			background-color: rgba(255, 255, 255, .5);
+			position: relative;
+
+			&::after {
+				content: '';
+				position: absolute;
+				background-color: #fff;
+				height: 1px;
+				top: 0;
+				left: 0;
+				width: 40%;
+			}
+		}
+
+		&-circle {
+			grid-area: circle;
+			height: 20px;
+			width: 20px;
+			z-index: 1;
+
+			.cloudvideoplayer-svg-fill {
+				fill: transparent;
+				stroke: #fff;
+				stroke-width: 3px;
+			}
+		}
+	}
+
 	&._playing {
 		.cloudvideoplayer {
 			&-play {
