--- a/Components/ProgressBar/ProgressBar.razor
+++ b/Components/ProgressBar/ProgressBar.razor
@@ -1,4 +1,5 @@
-﻿@inject ProgressBarJsInterop js
+﻿@namespace AngryMonkey.Cloud.Components
+@inject ProgressBarJsInterop js
 
 <div class="cloudprogressbar" @ref="ComponentElement">
     <div class="cloudprogressbar-left"></div>
