--- a/Components/wwwroot/progressbar/progressbar.css
+++ b/Components/wwwroot/progressbar/progressbar.css
@@ -1,37 +1,37 @@
-.cloudprogressbar {
+.amc-progressbar {
   margin-top: 30vh;
   display: grid;
   grid-template-areas: 'left middle right';
   grid-template-columns: 0 max-content 1fr;
   align-items: center;
 }
-.cloudprogressbar-left,
-.cloudprogressbar-right {
+.amc-progressbar-left,
+.amc-progressbar-right {
   width: 100%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.5);
   background-color: #fff;
   position: relative;
 }
-.cloudprogressbar-left {
+.amc-progressbar-left {
   grid-area: left;
 }
-.cloudprogressbar-right {
+.amc-progressbar-right {
   grid-area: right;
 }
-.cloudprogressbar-middle {
+.amc-progressbar-middle {
   grid-area: middle;
 }
-.cloudprogressbar-middle button {
+.amc-progressbar-middle button {
   padding: 0;
   z-index: 1;
 }
-.cloudprogressbar-middle button .cloudprogressbar-circle {
+.amc-progressbar-middle button .amc-progressbar-circle {
   fill: transparent;
   stroke: #fff;
   stroke-width: 3px;
 }
-.cloudprogressbar button {
+.amc-progressbar button {
   background: none;
   border: none;
   color: #fff;
@@ -39,9 +39,9 @@
   /*opacity: .6;*/
   transition: opacity 0.2s ease-in-out;
 }
-.cloudprogressbar button .cloudvideoplayer-svg-fill {
+.amc-progressbar button .amc-progressbar-svg-fill {
   fill: #fff;
 }
-.cloudprogressbar button:hover {
+.amc-progressbar button:hover {
   opacity: 1;
 }
