--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -1,49 +1,49 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 @inject VideoPlayerJsInterop js
 
-<div class="cloudvideoplayer" @ref="ComponentElement">
+<div class="amc-videoplayer" @ref="ComponentElement">
 
-    <div class="cloudvideoplayer-video">
+    <div class="amc-videoplayer-video">
         <video src="@VideoUrl"></video>
     </div>
 
-    <div class="cloudvideoplayer-info">
-        <div class="cloudvideoplayer-title">@Title</div>
+    <div class="amc-videoplayer-info">
+        <div class="amc-videoplayer-title">@Title</div>
     </div>
 
-    <div class="cloudvideoplayer-controls">
-        <div class="cloudvideoplayer-controls-left">
-            <button class="cloudvideoplayer-play" @onclick="PlayVideo">
+    <div class="amc-videoplayer-controls">
+        <div class="amc-videoplayer-controls-left">
+            <button class="amc-videoplayer-play" @onclick="PlayVideo">
                 <svg viewBox="0 0 36 40">
-                    <path class="cloudvideoplayer-svg-fill" d="M34.5,19.1C34.5,19.1,34.5,19.1,34.5,19.1c0-0.5-0.2-0.8-0.6-1L6.5,3.2l0,0C6.3,3.1,6.1,3.1,5.9,3.1h0
+                    <path class="amc-videoplayer-svg-fill" d="M34.5,19.1C34.5,19.1,34.5,19.1,34.5,19.1c0-0.5-0.2-0.8-0.6-1L6.5,3.2l0,0C6.3,3.1,6.1,3.1,5.9,3.1h0
 	                c0,0,0,0,0,0c-0.6,0-1.1,0.5-1.1,1.1v29.7l0,0v0c0,0.6,0.5,1.1,1.1,1.1c0.2,0,0.4-0.1,0.5-0.1l27.4-14.9l0,0
 	                C34.2,19.9,34.5,19.5,34.5,19.1L34.5,19.1z M7.1,6.1l23.9,12.9L7.1,32V6.1L7.1,6.1z" />
                 </svg>
             </button>
-            <button class="cloudvideoplayer-pause" @onclick="PauseVideo">
+            <button class="amc-videoplayer-pause" @onclick="PauseVideo">
                 <svg viewBox="0 0 36 40">
-                    <path class="cloudvideoplayer-svg-fill" d="M11.8,36L11.8,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C14.6,34.7,13.3,36,11.8,36z" />
-                    <path class="cloudvideoplayer-svg-fill" d="M24.6,36L24.6,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C27.4,34.7,26.2,36,24.6,36z" />
+                    <path class="amc-videoplayer-svg-fill" d="M11.8,36L11.8,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C14.6,34.7,13.3,36,11.8,36z" />
+                    <path class="amc-videoplayer-svg-fill" d="M24.6,36L24.6,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C27.4,34.7,26.2,36,24.6,36z" />
                 </svg>
             </button>
-            <button class="cloudvideoplayer-stop" @onclick="StopVideo">Stop</button>
+            <button class="amc-videoplayer-stop" @onclick="StopVideo">Stop</button>
         </div>
 
-        <div class="cloudvideoplayer-controls-middle">
-            <span class="cloudvideoplayer-duration"></span>
+        <div class="amc-videoplayer-controls-middle">
+            <span class="amc-videoplayer-duration"></span>
         </div>
 
-        <div class="cloudvideoplayer-controls-right">
-            <button class="cloudvideoplayer-enterfullscreen" @onclick="EnterFullScreen">Full Screen</button>
-            <button class="cloudvideoplayer-exitfullscreen" @onclick="ExitFullScreen">Exit Full Screen</button>
+        <div class="amc-videoplayer-controls-right">
+            <button class="amc-videoplayer-enterfullscreen" @onclick="EnterFullScreen">Full Screen</button>
+            <button class="amc-videoplayer-exitfullscreen" @onclick="ExitFullScreen">Exit Full Screen</button>
         </div>
     </div>
 
-    <div class="cloudvideoplayer-progress">
-        <div class="cloudvideoplayer-progress-line"></div>
-        <div class="cloudvideoplayer-progress-circle">
+    <div class="amc-videoplayer-progress">
+        <div class="amc-videoplayer-progress-line"></div>
+        <div class="amc-videoplayer-progress-circle">
                 <svg viewBox="0 0 40 40">
-                    <circle class="cloudvideoplayer-svg-fill" cx="20" cy="20" r="18" />
+                    <circle class="amc-videoplayer-svg-fill" cx="20" cy="20" r="18" />
                 </svg>
         </div>
     </div>
