--- a/Test/Pages/Index.razor
+++ b/Test/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@*
+
 <VideoPlayer Title="Welcome Lebanon :)" VideoUrl="https://angrymonkey.blob.core.windows.net/general/Good%20Morning%20Lebanon.mp4" Settings="@(
 new VideoPlayerSettings() {
     ShowVolumeButton = true
@@ -13,6 +13,14 @@ new VideoPlayerSettings() {
     ShowVolumeButton = true
 }
 )">
-</VideoPlayer>*@
+</VideoPlayer>
 
-<ProgressBar Value="23" />
+@*<ProgressBar Value="20" Total="500" OnChange="Test" />*@
+
+@code{
+    public double Seconds { get; set; }
+    public void Test(ChangeEventArgs args)
+    {
+        Console.WriteLine(args.Value);
+    }
+}
