--- a/Test/wwwroot/site.css
+++ b/Test/wwwroot/site.css
@@ -3,10 +3,10 @@
 	height: 450px;
 }
 
-.amc-progressbar {
+/*.amc-progressbar {
 	width: 600px;
 	margin-left: 50px;
-}
+}*/
 
 body{
 	height: 100vh;
