--- a/Components/ProgressBar/progressbar.less
+++ b/Components/ProgressBar/progressbar.less
@@ -7,6 +7,11 @@
 	grid-template-columns: 0 max-content 1fr;
 	align-items: center;
 
+	input[type="range"] {
+		/*grid-column: span 3;*/
+		display: none !important;
+	}
+
 	&-left,
 	&-right {
 		width: 100%;
