--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -4,7 +4,7 @@
 <div class="amc-videoplayer" @ref="ComponentElement">
 
     <div class="amc-videoplayer-video">
-        <video src="@VideoUrl"></video>
+        <video src="@VideoUrl" @onload="VideoLoaded"></video>
     </div>
 
     <div class="amc-videoplayer-info">
@@ -40,12 +40,7 @@
     </div>
 
     <div class="amc-videoplayer-progress">
-        <div class="amc-videoplayer-progress-line"></div>
-        <div class="amc-videoplayer-progress-circle">
-                <svg viewBox="0 0 40 40">
-                    <circle class="amc-videoplayer-svg-fill" cx="20" cy="20" r="18" />
-                </svg>
-        </div>
+        <ProgressBar Value="CurrentTime" Total="Duration" OnChange="DurationChange" />
     </div>
 
 </div>
@@ -59,14 +54,28 @@
     [Parameter]
     public string VideoUrl { get; set; }
 
+    public double Duration { get; set; } = 0;
+    public double CurrentTime { get; set; } = 0;
+
     [Parameter]
     public Components.VideoPlayerSettings Settings { get; set; }
 
+    public async Task DurationChange(ChangeEventArgs args)
+    {
+        await js.ChangeCurrentTime(ComponentElement, Convert.ToDouble(args.Value));
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
             await js.Init(ComponentElement);
+    }
+
+    public async Task VideoLoaded()
+    {
+        VideoInfo videoInfo = await js.GetVideoInfo(ComponentElement);
+
+        Duration = Convert.ToDouble(videoInfo.Duration);
     }
 
     public async Task PlayVideo()
