--- a/Components/ProgressBar/progressbar.less
+++ b/Components/ProgressBar/progressbar.less
@@ -1,15 +1,14 @@
 ﻿@import '../General/css/common.less';
 
 .amc-progressbar {
-	margin-top: 30vh;
 	display: grid;
 	grid-template-areas: 'left middle right';
 	grid-template-columns: 0 max-content 1fr;
 	align-items: center;
 
 	input[type="range"] {
-		/*grid-column: span 3;*/
-		display: none !important;
+		grid-column: span 3;
+		/*display: none !important;*/
 	}
 
 	&-left,
