--- a/Components/wwwroot/progressbar/progressbar.css
+++ b/Components/wwwroot/progressbar/progressbar.css
@@ -1,13 +1,12 @@
 .amc-progressbar {
-  margin-top: 30vh;
   display: grid;
   grid-template-areas: 'left middle right';
   grid-template-columns: 0 max-content 1fr;
   align-items: center;
 }
 .amc-progressbar input[type="range"] {
-  /*grid-column: span 3;*/
-  display: none !important;
+  grid-column: span 3;
+  /*display: none !important;*/
 }
 .amc-progressbar-left,
 .amc-progressbar-right {
