--- a/Components/ProgressBar/ProgressBar.razor
+++ b/Components/ProgressBar/ProgressBar.razor
@@ -1,14 +1,17 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 @inject ProgressBarJsInterop js
 
-<div class="amc-progressbar" @ref="ComponentElement">
+<div class="amc-progressbar" @ref="ComponentElement" @onmousedown="MouseDown">
     <div class="amc-progressbar-left"></div>
     <div class="amc-progressbar-middle">
-        <button @onmousedown="MouseDown">
-            <svg viewBox="0 0 40 40" width="@CircleSize" height="@CircleSize">
-                <circle class="amc-progressbar-circle" cx="20" cy="20" r="18" />
-            </svg>
-        </button>
+        @if (Total > 0)
+        {
+            <button>
+                <svg viewBox="0 0 40 40" width="@CircleSize" height="@CircleSize">
+                    <circle class="amc-progressbar-circle" cx="20" cy="20" r="18" />
+                </svg>
+            </button>
+        }
     </div>
     <div class="amc-progressbar-right"></div>
 
@@ -27,9 +30,7 @@
 
     [Parameter]
     public double Total { get; set; }
-
-    [Parameter]
-    public double Step { get; set; } = 1;
+    private double _total = 0;
 
     [Parameter]
     public int CircleSize { get; set; } = 30;
@@ -39,7 +40,7 @@
 
     private async Task OnValueChanged()
     {
-        await js.Repaint(ComponentElement, Value);
+        await js.Repaint(ComponentElement, Value, Total);
     }
 
     protected override async void OnParametersSet()
@@ -49,6 +50,12 @@
         if (Value != _value)
         {
             _value = Value;
+            await OnValueChanged();
+        }
+
+        if (Total != _total)
+        {
+            _total = Total;
             await OnValueChanged();
         }
     }
@@ -67,12 +74,6 @@
 
     private async Task MouseDown(MouseEventArgs e)
     {
-        await js.MouseDown(ComponentElement);
-    }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-            await js.Init(ComponentElement);
+        await js.MouseDown(ComponentElement, e.ClientX);
     }
 }
