--- a/Components/ProgressBar/progressbar.less
+++ b/Components/ProgressBar/progressbar.less
@@ -5,10 +5,11 @@
 	grid-template-areas: 'left middle right';
 	grid-template-columns: 0 max-content 1fr;
 	align-items: center;
+	cursor: pointer;
 
 	input[type="range"] {
-		grid-column: span 3;
-		/*display: none !important;*/
+		/*grid-column: span 3;*/
+		display: none !important;
 	}
 
 	&-left,
@@ -47,7 +48,6 @@
 		background: none;
 		border: none;
 		color: #fff;
-		cursor: pointer;
 		/*opacity: .6;*/
 		transition: opacity .2s ease-in-out;
 
