--- a/Test/Pages/Index.razor
+++ b/Test/Pages/Index.razor
@@ -1,11 +1,11 @@
 ﻿@page "/"
 
-<VideoPlayer Title="Welcome Lebanon :)" VideoUrl="https://angrymonkey.blob.core.windows.net/general/Good%20Morning%20Lebanon.mp4" Settings="@(
-new VideoPlayerSettings() {
+@*<VideoPlayer Title="Welcome Lebanon :)" VideoUrl="https://angrymonkey.blob.core.windows.net/general/Good%20Morning%20Lebanon.mp4" Settings="@(
+    new VideoPlayerSettings() {
     ShowVolumeButton = true
-}
-)">
-</VideoPlayer>
+    }
+    )">
+    </VideoPlayer>*@
 
 
 <VideoPlayer Title="Default Video" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" Settings="@(
@@ -17,7 +17,7 @@ new VideoPlayerSettings() {
 
 @*<ProgressBar Value="20" Total="500" OnChange="Test" />*@
 
-@code{
+@code {
     public double Seconds { get; set; }
     public void Test(ChangeEventArgs args)
     {
