--- a/Test/Pages/Index.razor
+++ b/Test/Pages/Index.razor
@@ -8,14 +8,24 @@
     </VideoPlayer>*@
 
 
-<VideoPlayer Title="Default Video" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" Settings="@(
+@*<VideoPlayer Title="Default Video" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" Settings="@(
 new VideoPlayerSettings() {
     ShowVolumeButton = true
 }
 )">
-</VideoPlayer>
+</VideoPlayer>*@
 
-@*<ProgressBar Value="20" Total="500" OnChange="Test" />*@
+<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Flat" />
+
+<br />
+<br />
+
+<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Circle" />
+
+<br />
+<br />
+
+<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Disk" />
 
 @code {
     public double Seconds { get; set; }
